@@ -1,39 +1,42 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>gov.nist.secauto</groupId>
 		<artifactId>oss-parent</artifactId>
-		<version>7-SNAPSHOT</version>
+		<version>10</version>
+		<relativePath>../oss-maven-10/oss-parent</relativePath>
 	</parent>
 
-	<groupId>gov.nist.rolie</groupId>
-	<artifactId>polie</artifactId>
+	<groupId>gov.nist.jrolie</groupId>
+	<artifactId>master</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
-	<name>polie</name>
+	<name>JROLIE Build Master Project</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
 		<jersey.version>2.23.1</jersey.version>
 		<rdf4j.version>2.0M3</rdf4j.version>
-		<log4j.version>2.6.2</log4j.version>
+		<log4j.version>2.11.1</log4j.version>
 		<netty.version>4.0.0.Alpha8</netty.version>
-		<spring.version>4.3.6.RELEASE</spring.version>
-		<resteasy.version>3.1.0.Final</resteasy.version>
-		<junit.version>3.8.1</junit.version>
+		<spring.version>5.1.5.RELEASE</spring.version>
+		<resteasy.version>4.0.0.Beta5</resteasy.version>
+		<junit.version>4.12</junit.version>
+		<jackson.version>2.9.6</jackson.version>
+		<woodstox.version>5.1.0</woodstox.version>
+		<jmock.version>2.8.4</jmock.version>
 	</properties>
 
 
 	<modules>
-		<module>polie-model</module>
-		<module>polie-tools</module>
-		<module>polie-persistence</module>
-		<module>polie-atomLogic</module>
-		<module>polie-server</module>
-		<module>polie-client</module>
+		<module>model</module>
+		<module>persistence-api</module>
+		<module>logic</module>
+		<module>server</module>
 	</modules>
 
 
@@ -45,7 +48,24 @@
 				<version>${junit.version}</version>
 				<scope>test</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.jmock</groupId>
+				<artifactId>jmock-junit4</artifactId>
+				<version>${jmock.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.jmock</groupId>
+				<artifactId>jmock-legacy</artifactId>
+				<version>${jmock.version}</version>
+				<scope>test</scope>
+			</dependency>
 
+			<dependency>
+				<groupId>com.fasterxml.woodstox</groupId>
+				<artifactId>woodstox-core</artifactId>
+				<version>${woodstox.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-context</artifactId>
@@ -83,6 +103,17 @@
 				<artifactId>resteasy-spring</artifactId>
 				<version>${resteasy.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.dataformat</groupId>
+				<artifactId>jackson-dataformat-xml</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.resteasy</groupId>
+				<artifactId>resteasy-cache-core</artifactId>
+				<version>${resteasy.version}</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
@@ -91,22 +122,13 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>xmlbeans-maven-plugin</artifactId>
-					<version>2.3.3</version>
-					<executions>
-						<execution>
-							<goals>
-								<goal>xmlbeans</goal>
-							</goals>
-						</execution>
-					</executions>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${version.plugin.surefire}</version>
 					<configuration>
-						<javaSource>1.5</javaSource>
-						<noJavac>true</noJavac>
-						<classGenerationDirectory>${project.build.directory}/generated-sources/xmlbeans</classGenerationDirectory>
+						<skipAfterFailureCount>1</skipAfterFailureCount>
+						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 					</configuration>
-
 				</plugin>
 			</plugins>
 		</pluginManagement>
